Fixed jvm allocation array size and initilized docker